udev 146
========
New keymaps, new modem, hid2hci updated.


udev 145
========
Fix possible crash in udevd when worker processes are busy, rules are
changed at the same time, and workers get killed to reload the rules.

udev 144
========
Bugfixes.

Properties set with ENV{.FOO}="bar" are marked private by starting the
name with a '.'. They will not be stored in the database, and not be
exported with the event.

Firmware files are looked up in:
  /lib/firmware/updates/$(uname -r)
  /lib/firmware/updates
  /lib/firmware/$(uname -r)
  /lib/firmware"
now.

ATA devices switched the property from ID_BUS=scsi to ID_BUS=ata.
ata_id, instead of scsi_id, is the default tool now for ATA devices.

udev 143
========
Bugfixes.

The configure options have changed because another library needs to be
installed in a different location. Instead of exec_prefix and udev_prefix,
libdir, rootlibdir and libexecdir are used. The Details are explained in
the README file.

Event processes now get re-used after they handled an event. This reduces
the number of forks and the pressure on the CPU significantly, because
cloned event processes no longer cause page faults in the main daemon.
After the events have settled, a few worker processes stay around for
future events, all others get cleaned up.

To be able to use signalfd(), udev depends on kernel version 2.6.25 now.
Also inotify support is mandatory now to run udev.

The format of the queue exported by the udev damon has changed. There is
no longer a /dev/.udev/queue/ directory. The current event queue can be
accessed with udevadm settle and libudedv.

Libudev does not have the unstable API header anymore. From now on,
incompatible changes will be handled by bumping the library major version.

To build udev from the git tree gtk-doc is needed now. The tarballs will
build without it and contain the pre-built documentation. An online copy
is available here:
  http://www.kernel.org/pub/linux/utils/kernel/hotplug/libudev/
